# mahi-gui

./: .clang-format  .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  LICENSE  README.md  all_mahi_gui.diff  all_mahi_gui_backup.diff  imgui.ini  main.cpp
cmake/: mahi-gui-config.cmake.in
examples/: CMakeLists.txt  coroutines.cpp  demo.cpp  drawing.cpp  events.cpp  ex_alix.cpp  ex_conway.cpp  ex_coroutines.cpp  ex_coroutines_benchmark.cpp  ex_demo.cpp  ex_dpi.cpp  ex_drawing.cpp  ex_events.cpp  ex_fbo.cpp  ex_files.cpp  ex_fonts.cpp  ex_gears.cpp  ex_hidden.cpp  ex_imgui_demo.cpp  ex_implot_demo.cpp  ex_likert.cpp  ex_log_window.cpp  ex_msd.cpp  ex_nvg.cpp  ex_nvg_demo.cpp  ex_nvg_fbo.cpp  ex_opengl.cpp  ex_plots.cpp  ex_plots_api.cpp  ex_plots_bench.cpp  ex_plots_benchmark.cpp  ex_plots_dnd.cpp  ex_plots_draw.cpp  ex_plots_realtime.cpp  ex_plotter.cpp  ex_puzzometry.cpp  ex_raw_glfw.cpp  ex_rt_plots.cpp  ex_sequence.cpp  ex_shapes.cpp  (+14 more)
include/MAHUI/: Application.hpp  Coroutine.hpp  Macros.hpp  Math.hpp  Print.hpp  Random.hpp  Range.hpp  Sequence.hpp  Signal.hpp  Tween.hpp  Util.hpp
include/MAHUI/Detail/: Math.inl  Tween.inl
include/MAHUI/Fonts/: IconsFontAwesome5Brands.hpp
include/Mahi/: Gui.hpp
include/Mahi/Gui/: Application.hpp  Color.hpp  Coroutine.hpp  Draw.hpp  Fonts.hpp  Macros.hpp  Native.hpp  Plotter.hpp  Rect.hpp  Sequence.hpp  Shape.hpp  Svg.hpp  Transform.hpp  Transformable.hpp  Tween.hpp  Vec2.hpp  imgui_custom.hpp  imgui_plot.hpp  imgui_plot_old.hpp  nanovg_custom.hpp
include/Mahi/Gui/Detail/: Tween.inl  Vec2.inl
include/Mahi/Gui/Icons/: IconsFontAwesome5.hpp
include/mahi/: Application.hpp  Color.hpp  Coroutine.hpp  Event.hpp  ImGui.hpp  Macros.hpp  Math.hpp  Print.hpp  Random.hpp  Range.hpp  Sequence.hpp  Svg.hpp  System.hpp  Tween.hpp  Vec2.hpp  gui.hpp  imconfig.h  imgui_custom.hpp
include/mahi/Detail/: Tween.inl
include/mahi/gui/: Application.hpp  Color.hpp  Event.hpp  Math.hpp  Print.hpp  Random.hpp  Sequence.hpp  Svg.hpp  System.hpp  Tween.hpp  Vec2.hpp  imgui_custom.hpp  imgui_plot.hpp
include/mahi/gui/Detail/: Math.inl  Vec2.inl
src/MAHUI/: Application.cpp  CMakeLists.txt  Coroutine.cpp  Print.cpp  Random.cpp  Range.cpp
src/MAHUI/Fonts/: CMakeLists.txt  FontAwesome5.cpp  FontAwesome5Brands.cpp  Fonts.hpp  RobotoBold.cpp  RobotoItalic.cpp  RobotoMonoBold.cpp  RobotoMonoItalic.cpp  RobotoMonoRegular.cpp  RobotoRegular.cpp
src/Mahi/Gui/: Application.cpp  CMakeLists.txt  Color.cpp  Draw.cpp  Native.cpp  Plotter.cpp  Shape.cpp  Svg.cpp  System.cpp  Transform.cpp  Transformable.cpp  imgui_custom.cpp  imgui_plot.cpp  imgui_plot_old.cpp  nanovg_custom.cpp
src/Mahi/Gui/Fonts/: FontAwesome5.cpp  FontAwesome5Brands.cpp  RobotoBold.cpp  RobotoItalic.cpp  RobotoMonoBold.cpp  RobotoMonoItalic.cpp  RobotoMonoRegular.cpp  RobotoRegular.cpp
src/mahi/: Application.cpp  CMakeLists.txt  Color.cpp  Coroutine.cpp  ImGui.cpp  Print.cpp  Random.cpp  Svg.cpp  System.cpp  imgui_custom.cpp
src/mahi/Fonts/: CMakeLists.txt  FontAwesome5Brands.cpp  Fonts.hpp  RobotoBold.cpp  RobotoMonoItalic.cpp
src/mahi/gui/: Application.cpp  CMakeLists.txt  Color.cpp  Coroutine.cpp  Print.cpp  Random.cpp  Svg.cpp  System.cpp  imgui_custom.cpp  imgui_plot.cpp
src/mahi/gui/Fonts/: CMakeLists.txt  FontAwesome5.cpp  RobotoItalic.cpp  RobotoMonoBold.cpp  RobotoMonoRegular.cpp  RobotoRegular.cpp
